// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Paidout Web 1`] = `
<div
  style={
    Object {
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "alignItems": "stretch",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "marginBottom": "0px",
      "marginLeft": "28.8px",
      "marginRight": "28.8px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msFlexPreferredSize": "auto",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "28.8px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "WebkitFlexBasis": "auto",
          "WebkitFlexShrink": 0,
          "borderBottomWidth": "0px",
          "borderLeftWidth": "0px",
          "borderRightWidth": "0px",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "color": "inherit",
          "display": "flex",
          "flexBasis": "auto",
          "flexShrink": 0,
          "fontFamily": "HelveticaNeue",
          "fontSize": "12.6px",
          "fontStyle": "inherit",
          "fontVariant": "inherit",
          "fontWeight": "inherit",
          "lineHeight": "16.799999999999997px",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      FEBRUARY
    </div>
  </div>
  <div
    data-for="tooltip"
    data-tip="{\\"type\\":\\"EARNING\\",\\"props\\":{\\"earning\\":{\\"community\\":\\"relevant\\",\\"communityId\\":null,\\"createdAt\\":\\"2019-02-05T05:42:29.684Z\\",\\"earned\\":0.0918203703714779,\\"estimatedPostPayout\\":0,\\"post\\":\\"5c45483709a5b05cd0646d7c\\",\\"shares\\":0,\\"source\\":\\"post\\",\\"stakedTokens\\":0,\\"status\\":\\"paidout\\",\\"totalPostShares\\":0,\\"type\\":\\"coins\\",\\"updatedAt\\":\\"2019-02-05T05:42:29.684Z\\",\\"user\\":\\"5c4267177f81360b10b4b196\\",\\"__v\\":0,\\"_id\\":\\"5c5922452de74dc9e56eeebb\\"}}}"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 0,
        "WebkitJustifyContent": "space-between",
        "alignItems": "stretch",
        "backgroundColor": "rgba(248,248,248,1.00)",
        "borderBottomColor": "rgba(221,221,221,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "justifyContent": "space-between",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "14.4px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "row",
        "msFlexNegative": 0,
        "msFlexPack": "justify",
        "msFlexPositive": 1,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "10.8px",
        "paddingLeft": "14.4px",
        "paddingRight": "14.4px",
        "paddingTop": "10.8px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "row",
          "WebkitFlexShrink": 0,
          "alignItems": "stretch",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexShrink": 0,
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "row",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        dir="auto"
        mr={4}
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "inherit",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "12.6px",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "16.799999999999997px",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "28.8px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        Feb 5th, 2019
      </div>
      <div
        c="#999999"
        dir="auto"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "WebkitTextDecorationColor": "rgba(153,153,153,1.00)",
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "12.6px",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "16.799999999999997px",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "textDecorationColor": "rgba(153,153,153,1.00)",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        paidout
      </div>
    </div>
    <div
      c="#7ED321"
      dir="auto"
      style={
        Object {
          "WebkitFlexBasis": "auto",
          "WebkitFlexShrink": 0,
          "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
          "borderBottomWidth": "0px",
          "borderLeftWidth": "0px",
          "borderRightWidth": "0px",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "color": "rgba(126,211,33,1.00)",
          "display": "flex",
          "flexBasis": "auto",
          "flexShrink": 0,
          "fontFamily": "HelveticaNeue",
          "fontSize": "12.6px",
          "fontStyle": "inherit",
          "fontVariant": "inherit",
          "fontWeight": "inherit",
          "lineHeight": "16.799999999999997px",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "textDecoration": "none",
          "textDecorationColor": "rgba(126,211,33,1.00)",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      + 
      10
      RNT
    </div>
  </div>
</div>
`;

exports[`Snapshot Pending Web 1`] = `
<div
  style={
    Object {
      "WebkitAlignItems": "stretch",
      "WebkitBoxAlign": "stretch",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "vertical",
      "WebkitFlexBasis": "auto",
      "WebkitFlexDirection": "column",
      "WebkitFlexShrink": 0,
      "alignItems": "stretch",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0px",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0px",
      "borderRightStyle": "solid",
      "borderRightWidth": "0px",
      "borderTopStyle": "solid",
      "borderTopWidth": "0px",
      "boxSizing": "border-box",
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexShrink": 0,
      "marginBottom": "0px",
      "marginLeft": "28.8px",
      "marginRight": "28.8px",
      "marginTop": "0px",
      "minHeight": "0px",
      "minWidth": "0px",
      "msFlexAlign": "stretch",
      "msFlexDirection": "column",
      "msFlexNegative": 0,
      "msFlexPreferredSize": "auto",
      "paddingBottom": "0px",
      "paddingLeft": "0px",
      "paddingRight": "0px",
      "paddingTop": "0px",
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "column",
        "WebkitFlexShrink": 0,
        "alignItems": "stretch",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "0px",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "0px",
        "borderRightStyle": "solid",
        "borderRightWidth": "0px",
        "borderTopStyle": "solid",
        "borderTopWidth": "0px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "28.8px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "column",
        "msFlexNegative": 0,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "0px",
        "paddingLeft": "0px",
        "paddingRight": "0px",
        "paddingTop": "0px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      dir="auto"
      style={
        Object {
          "WebkitFlexBasis": "auto",
          "WebkitFlexShrink": 0,
          "borderBottomWidth": "0px",
          "borderLeftWidth": "0px",
          "borderRightWidth": "0px",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "color": "inherit",
          "display": "flex",
          "flexBasis": "auto",
          "flexShrink": 0,
          "fontFamily": "HelveticaNeue",
          "fontSize": "12.6px",
          "fontStyle": "inherit",
          "fontVariant": "inherit",
          "fontWeight": "inherit",
          "lineHeight": "16.799999999999997px",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      FEBRUARY
    </div>
  </div>
  <div
    data-for="tooltip"
    data-tip="{\\"type\\":\\"EARNING\\",\\"props\\":{\\"earning\\":{\\"_id\\":\\"5c5086662de74dc9e5f61b66\\",\\"post\\":\\"5c3d07d0348c61cc78023449\\",\\"user\\":\\"5c4267177f81360b10b4b196\\",\\"__v\\":0,\\"community\\":\\"relevant\\",\\"communityId\\":\\"5ba92052a7c7a539ed46d76f\\",\\"status\\":\\"pending\\",\\"type\\":\\"coins\\",\\"earned\\":0,\\"shares\\":10,\\"estimatedPostPayout\\":600,\\"totalPostShares\\":100,\\"stakedTokens\\":60,\\"source\\":\\"post\\"}}}"
    style={
      Object {
        "WebkitAlignItems": "stretch",
        "WebkitBoxAlign": "stretch",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "justify",
        "WebkitFlexBasis": "auto",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 0,
        "WebkitJustifyContent": "space-between",
        "alignItems": "stretch",
        "backgroundColor": "rgba(248,248,248,1.00)",
        "borderBottomColor": "rgba(221,221,221,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(221,221,221,1.00)",
        "borderLeftStyle": "solid",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(221,221,221,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(221,221,221,1.00)",
        "borderTopStyle": "solid",
        "borderTopWidth": "1px",
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 0,
        "justifyContent": "space-between",
        "marginBottom": "0px",
        "marginLeft": "0px",
        "marginRight": "0px",
        "marginTop": "14.4px",
        "minHeight": "0px",
        "minWidth": "0px",
        "msFlexAlign": "stretch",
        "msFlexDirection": "row",
        "msFlexNegative": 0,
        "msFlexPack": "justify",
        "msFlexPositive": 1,
        "msFlexPreferredSize": "auto",
        "paddingBottom": "10.8px",
        "paddingLeft": "14.4px",
        "paddingRight": "14.4px",
        "paddingTop": "10.8px",
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexBasis": "auto",
          "WebkitFlexDirection": "row",
          "WebkitFlexShrink": 0,
          "alignItems": "stretch",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0px",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0px",
          "borderRightStyle": "solid",
          "borderRightWidth": "0px",
          "borderTopStyle": "solid",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexShrink": 0,
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "minHeight": "0px",
          "minWidth": "0px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "row",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        dir="auto"
        mr={4}
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "inherit",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "12.6px",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "16.799999999999997px",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "28.8px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      />
      <div
        c="#999999"
        dir="auto"
        style={
          Object {
            "WebkitFlexBasis": "auto",
            "WebkitFlexShrink": 0,
            "WebkitTextDecorationColor": "rgba(153,153,153,1.00)",
            "borderBottomWidth": "0px",
            "borderLeftWidth": "0px",
            "borderRightWidth": "0px",
            "borderTopWidth": "0px",
            "boxSizing": "border-box",
            "color": "rgba(153,153,153,1.00)",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "fontFamily": "HelveticaNeue",
            "fontSize": "12.6px",
            "fontStyle": "inherit",
            "fontVariant": "inherit",
            "fontWeight": "inherit",
            "lineHeight": "16.799999999999997px",
            "marginBottom": "0px",
            "marginLeft": "0px",
            "marginRight": "0px",
            "marginTop": "0px",
            "msFlexNegative": 0,
            "msFlexPreferredSize": "auto",
            "paddingBottom": "0px",
            "paddingLeft": "0px",
            "paddingRight": "0px",
            "paddingTop": "0px",
            "position": "relative",
            "textDecoration": "none",
            "textDecorationColor": "rgba(153,153,153,1.00)",
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        pending
      </div>
    </div>
    <div
      c="#7ED321"
      dir="auto"
      style={
        Object {
          "WebkitFlexBasis": "auto",
          "WebkitFlexShrink": 0,
          "WebkitTextDecorationColor": "rgba(126,211,33,1.00)",
          "borderBottomWidth": "0px",
          "borderLeftWidth": "0px",
          "borderRightWidth": "0px",
          "borderTopWidth": "0px",
          "boxSizing": "border-box",
          "color": "rgba(126,211,33,1.00)",
          "display": "flex",
          "flexBasis": "auto",
          "flexShrink": 0,
          "fontFamily": "HelveticaNeue",
          "fontSize": "12.6px",
          "fontStyle": "inherit",
          "fontVariant": "inherit",
          "fontWeight": "inherit",
          "lineHeight": "16.799999999999997px",
          "marginBottom": "0px",
          "marginLeft": "0px",
          "marginRight": "0px",
          "marginTop": "0px",
          "msFlexNegative": 0,
          "msFlexPreferredSize": "auto",
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "0px",
          "paddingTop": "0px",
          "position": "relative",
          "textDecoration": "none",
          "textDecorationColor": "rgba(126,211,33,1.00)",
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      + 
      10
      RNT
    </div>
  </div>
</div>
`;
